@@ -9,22 +9,15 @@ package io.camunda.service.transformers.filter;
 
 import static io.camunda.search.clients.query.SearchQueryBuilders.*;
 
-import io.camunda.search.clients.query.SearchMatchQuery;
 import io.camunda.search.clients.query.SearchQuery;
 import io.camunda.service.search.filter.DateValueFilter;
 import io.camunda.service.search.filter.ProcessInstanceFilter;
-import io.camunda.service.search.filter.ProcessInstanceVariableFilter;
 import io.camunda.service.transformers.ServiceTransformers;
 import io.camunda.service.transformers.filter.DateValueFilterTransformer.DateFieldFilter;
-import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
-import org.apache.commons.lang3.StringUtils;
 
 public final class ProcessInstanceFilterTransformer
     implements FilterTransformer<ProcessInstanceFilter> {
-
-  private static final String WILD_CARD = "*";
 
   private final ServiceTransformers transformers;
 
@@ -35,263 +28,46 @@ public final class ProcessInstanceFilterTransformer
   @Override
   public SearchQuery toSearchQuery(final ProcessInstanceFilter filter) {
 
-    final var isProcessInstanceQuery = getIsProcessInstanceQuery();
-    final var runningFinishedQuery = getRunningFinishedQuery(filter);
-    final var retriesLeftQuery = getRetriesLeftQuery(filter.retriesLeft());
-    final var errorMessageQuery = getErrorMessageQuery(filter.errorMessage());
-    final var activityIdQuery = getActivityIdQuery(filter);
-    final var startDateQuery = getStartDateQuery(filter.startDate());
-    final var endDateQuery = getEndDateQuery(filter.endDate());
-    final var bpmnProcessIdsQuery = getBpmnProcessIdsQuery(filter.bpmnProcessIds());
-    final var processDefinitionVersionsQuery =
-        getProcessDefinitionVersionsQuery(filter.processDefinitionVersions());
-    final var variableQuery = getProcessInstanceVariableQuery(filter.variable());
-    final var batchOperationIdsQuery = getBatchOperationIdsQuery(filter.batchOperationIds());
-    final var parentProcessInstanceKeys =
-        getParentProcessInstanceKeysQuery(filter.parentProcessInstanceKeys());
-    final var tenantIdsQuery = getTenantIdsQuery(filter.tenantIds());
-
     return and(
-        isProcessInstanceQuery,
-        runningFinishedQuery,
-        retriesLeftQuery,
-        errorMessageQuery,
-        activityIdQuery,
-        startDateQuery,
-        endDateQuery,
-        bpmnProcessIdsQuery,
-        processDefinitionVersionsQuery,
-        variableQuery,
-        batchOperationIdsQuery,
-        parentProcessInstanceKeys,
-        tenantIdsQuery);
+        getIsProcessInstanceQuery(),
+        longTerms("key", filter.processInstanceKeys()),
+        stringTerms("bpmnProcessId", filter.processDefinitionIds()),
+        stringTerms("processName", filter.processDefinitionNames()),
+        intTerms("processVersion", filter.processDefinitionVersions()),
+        stringTerms("processVersionTag", filter.processDefinitionVersionTags()),
+        longTerms("processDefinitionKey", filter.processDefinitionKeys()),
+        longTerms("rootProcessInstanceKey", filter.rootProcessInstanceKeys()),
+        longTerms("parentProcessInstanceKey", filter.parentProcessInstanceKeys()),
+        longTerms("parentFlowNodeInstanceKey", filter.parentFlowNodeInstanceKeys()),
+        stringTerms("treePath", filter.treePaths()),
+        getDateQuery("startDate", filter.startDate()),
+        getDateQuery("endDate", filter.endDate()),
+        stringTerms("state", filter.states()),
+        getIncidentQuery(filter.incident()),
+        stringTerms("tenantId", filter.tenantIds()));
   }
 
   private SearchQuery getIsProcessInstanceQuery() {
     return term("joinRelation", "processInstance");
   }
 
-  private SearchQuery getRunningFinishedQuery(final ProcessInstanceFilter filter) {
-    final var running = filter.running();
-    final var active = filter.active();
-    final var incidents = filter.incidents();
-    final var finished = filter.finished();
-    final var completed = filter.completed();
-    final var canceled = filter.canceled();
-
-    if (!running && !finished) {
-      // empty list should be returned
-      return matchNone();
-    }
-
-    if (running && active && incidents && finished && completed && canceled) {
-      // select all
-      return null;
-    }
-
-    SearchQuery runningQuery = null;
-    if (running && (active || incidents)) {
-      // running query
-      runningQuery = not(exists("endDate"));
-      final var activeQuery = getActiveQuery(active);
-      final var incidentsQuery = getIncidentsQuery(incidents);
-      if (filter.activityId() == null && filter.active() && filter.incidents()) {
-        // we request all running instances
-      } else {
-        // some of the queries may be null
-        runningQuery = and(runningQuery, or(activeQuery, incidentsQuery));
-      }
-    }
-
-    SearchQuery finishedQuery = null;
-    if (finished && (completed || canceled)) {
-      // finished query
-      finishedQuery = exists("endDate");
-      final var completedQuery = getCompletedQuery(completed);
-      final var canceledQuery = getCanceledQuery(canceled);
-      if (filter.activityId() == null && filter.completed() && filter.canceled()) {
-        // we request all finished instances
-      } else {
-        finishedQuery = and(finishedQuery, or(completedQuery, canceledQuery));
-      }
-    }
-
-    final var processInstanceQuery = or(runningQuery, finishedQuery);
-    if (processInstanceQuery == null) {
-      return matchNone();
-    }
-
-    return processInstanceQuery;
-  }
-
-  private SearchQuery getActiveQuery(final boolean active) {
-    if (active) {
-      return term("incident", false);
-    }
-    return null;
-  }
-
-  private SearchQuery getIncidentsQuery(final boolean incidents) {
-    if (incidents) {
-      return term("incident", true);
-    }
-    return null;
-  }
-
-  private SearchQuery getCompletedQuery(final boolean completed) {
-    if (completed) {
-      return term("state", "COMPLETED");
-    }
-    return null;
-  }
-
-  private SearchQuery getCanceledQuery(final boolean canceled) {
-    if (canceled) {
-      return term("state", "CANCELED");
-    }
-    return null;
-  }
-
-  private SearchQuery getRetriesLeftQuery(final boolean retriesLeft) {
-    if (retriesLeft) {
-      final var retriesLeftQuery = term("jobFailedWithRetriesLeft", true);
-      return hasChildQuery("activity", retriesLeftQuery);
-    }
-    return null;
-  }
-
-  private SearchQuery getErrorMessageQuery(final String errorMessage) {
-    if (StringUtils.isEmpty(errorMessage)) {
-      return null;
-    }
-
-    if (errorMessage.contains(WILD_CARD)) {
-      return getErrorMessageAsWildcardQuery(errorMessage.toLowerCase());
-    } else {
-      return getErrorMessageAsAndMatchQuery(errorMessage);
-    }
-  }
-
-  private SearchQuery getErrorMessageAsWildcardQuery(final String errorMessage) {
-    return hasChildQuery("activity", wildcardQuery("errorMessage", errorMessage));
-  }
-
-  private SearchQuery getErrorMessageAsAndMatchQuery(final String errorMessage) {
-    return hasChildQuery(
-        "activity",
-        match("errorMessage", errorMessage, SearchMatchQuery.SearchMatchQueryOperator.AND));
-  }
-
-  private SearchQuery getActivityIdQuery(final ProcessInstanceFilter filter) {
-    final String activityId = filter.activityId();
-    if (StringUtils.isEmpty(activityId)) {
-      return null;
-    }
-
-    SearchQuery activeActivityIdQuery = null;
-    if (filter.active()) {
-      activeActivityIdQuery = createActivityIdQuery(activityId, "ACTIVE");
-    }
-    SearchQuery incidentActivityIdQuery = null;
-    if (filter.incidents()) {
-      incidentActivityIdQuery = createActivityIdIncidentQuery(activityId);
-    }
-    SearchQuery completedActivityIdQuery = null;
-    if (filter.completed()) {
-      completedActivityIdQuery = createActivityIdQuery(activityId, "COMPLETED");
-    }
-    SearchQuery canceledActivityIdQuery = null;
-    if (filter.canceled()) {
-      canceledActivityIdQuery = createActivityIdQuery(activityId, "TERMINATED");
-    }
-    return or(
-        activeActivityIdQuery,
-        incidentActivityIdQuery,
-        completedActivityIdQuery,
-        canceledActivityIdQuery);
-  }
-
-  private SearchQuery createActivityIdQuery(String activityId, String flowNodeState) {
-    final SearchQuery activitiesQuery = term("activityState", flowNodeState);
-    final SearchQuery activityIdQuery = term("activityId", activityId);
-    SearchQuery activityIsEndNodeQuery = null;
-    if (Objects.equals(flowNodeState, "COMPLETED")) {
-      activityIsEndNodeQuery = term("activityType", "END_EVENT");
-    }
-
-    return hasChildQuery("activity", and(activitiesQuery, activityIdQuery, activityIsEndNodeQuery));
-  }
-
-  private SearchQuery createActivityIdIncidentQuery(String activityId) {
-    final SearchQuery activitiesQuery = term("activityState", "ACTIVE");
-    final SearchQuery activityIdQuery = term("activityId", activityId);
-    final SearchQuery incidentExists = exists("errorMessage");
-
-    return hasChildQuery("activity", and(activitiesQuery, activityIdQuery, incidentExists));
-  }
-
-  private SearchQuery getStartDateQuery(final DateValueFilter filter) {
+  private SearchQuery getDateQuery(final String field, final DateValueFilter filter) {
     if (filter != null) {
-      final var transformer = getDateValueFilterTransformer();
-      return transformer.apply(new DateFieldFilter("startDate", filter));
+      final var transformer = transformers.getFilterTransformer(DateValueFilter.class);
+      return transformer.apply(new DateFieldFilter(field, filter));
     }
     return null;
   }
 
-  private SearchQuery getEndDateQuery(final DateValueFilter filter) {
-    if (filter != null) {
-      final var transformer = getDateValueFilterTransformer();
-      return transformer.apply(new DateFieldFilter("endDate", filter));
+  private SearchQuery getIncidentQuery(final Boolean incident) {
+    if (incident != null) {
+      return term("incident", incident);
     }
     return null;
-  }
-
-  private FilterTransformer<DateFieldFilter> getDateValueFilterTransformer() {
-    return transformers.getFilterTransformer(DateValueFilter.class);
-  }
-
-  private SearchQuery getBpmnProcessIdsQuery(final List<String> bpmnProcessIds) {
-    return stringTerms("bpmnProcessId", bpmnProcessIds);
-  }
-
-  private SearchQuery getProcessDefinitionVersionsQuery(
-      final List<Integer> processDefinitionVersions) {
-    return intTerms("processVersion", processDefinitionVersions);
-  }
-
-  private SearchQuery getProcessInstanceVariableQuery(
-      final ProcessInstanceVariableFilter variable) {
-    if (variable != null) {
-      final var query =
-          and(term("varName", variable.name()), stringTerms("varValue", variable.values()));
-      return hasChildQuery("variable", query);
-    }
-    return null;
-  }
-
-  private SearchQuery getBatchOperationIdsQuery(final List<String> batchOperationIds) {
-    return stringTerms("batchOperationIds", batchOperationIds);
-  }
-
-  private SearchQuery getParentProcessInstanceKeysQuery(
-      final List<Long> parentProcessInstanceKeys) {
-    return longTerms("parentProcessInstanceKey", parentProcessInstanceKeys);
-  }
-
-  private SearchQuery getTenantIdsQuery(final List<String> tenantIds) {
-    return stringTerms("tenantId", tenantIds);
   }
 
   @Override
   public List<String> toIndices(ProcessInstanceFilter filter) {
-    final var finished = filter.finished();
-    final var completed = filter.completed();
-    final var canceled = filter.canceled();
-
-    if (finished || completed || canceled) {
-      return Arrays.asList("operate-list-view-8.3.0_alias");
-    } else {
-      return Arrays.asList("operate-list-view-8.3.0_");
-    }
+    return List.of("operate-list-view-8.3.0_alias");
   }
 }
